--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 code {
@@ -361,4 +361,11 @@ code:not(.preview pre code) {
   margin-bottom: 2rem;
   border-radius: 8px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.reset-btn {
+  font: medium sans-serif;
+  font-size: medium;
+  text-align: center;
+  color: #007bff;
 }
